# jules

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  _config.yml  array__tutorial.md  check_files.sh  contributors.txt  doc_array__array.md  doc_array__binary_expr_array.md  doc_array__blas.md  doc_array__contiguous_array.md  doc_array__detail__allocator.md  doc_array__detail__common.md  doc_array__detail__iterator.md  doc_array__detail__slicing.md  doc_array__functional.md  doc_array__ind_array.md  doc_array__io.md  doc_array__numeric.md  doc_array__ref_array.md  doc_array__slice.md  doc_base__async.md  doc_base__numeric.md  doc_base__random.md  doc_core__debug.md  doc_core__detail__numbers.md  doc_core__meta.md  doc_core__range.md  doc_core__type.md  doc_dataframe__column.md  doc_dataframe__dataframe.md  doc_dataframe__dataframe_decl.md  doc_dataframe__detail__column.md  doc_dataframe__detail__column_model.md  (+12 more)
_includes/: footer.html  head.html  header.html
_layouts/: default.html
_sass/: _base.scss  _syntax-highlighting.scss
benchmark/: .gitignore  .ycm_extra_conf.py  Makefile  benchmark.hpp  test_suite.cpp  track.hpp
cmake/modules/: FindCBLAS.cmake
doc/: Makefile
docs/: _config.yml  array__tutorial.md  check_files.sh  doc_array__all.md  doc_array__array.md  doc_array__binary_expr_array.md  doc_array__detail__allocator.md  doc_array__detail__common.md  doc_array__detail__iterator.md  doc_array__detail__slicing.md  doc_array__functional.md  doc_array__ind_array.md  doc_array__numeric.md  doc_array__ref_array.md  doc_array__slice.md  doc_array__unary_expr_array.md  doc_base__async.md  doc_base__numeric.md  doc_core__debug.md  doc_core__range.md  doc_core__type.md  doc_dataframe__column.md  doc_dataframe__column_decl.md  doc_dataframe__column_view.md  doc_dataframe__column_view_decl.md  doc_dataframe__dataframe.md  doc_dataframe__dataframe_decl.md  doc_dataframe__detail__column.md  doc_dataframe__io_decl.md  doc_dataframe__row_view.md  doc_dataframe__row_view_decl.md  doc_formula__expression.md  doc_formula__expression_decl.md  doc_formula__formula.md  doc_formula__formula_decl.md  doc_range__iterator.md  doc_range__range.md  doc_range__tokenized.md  doc_util__algorithm.md  doc_util__async.md  (+6 more)
docs/_includes/: site.css
include/array/: array.hpp  array_decl.hpp  view.hpp
include/array/detail/: all.hpp  array.hpp  array_decl.hpp  common.hpp  define_macros.hpp  expression.hpp  expression_decl.hpp  indirect_array.hpp  indirect_array_decl.hpp  ref_array.hpp  ref_array_decl.hpp  slice.hpp  slice_decl.hpp  undef_macros.hpp  utility.hpp
include/core/: type.hpp
include/dataframe/: column.hpp  column_decl.hpp  column_view.hpp  column_view_decl.hpp  dataframe.hpp  dataframe_colview.hpp  dataframe_colview_decl.hpp  dataframe_decl.hpp  io_decl.hpp
include/dataframe/detail/: column.hpp  storage.hpp
include/formula/: expression.hpp  expression_decl.hpp  formula.hpp  formula_decl.hpp
include/formula/detail/: term.hpp  term_decl.hpp
include/jules/: .ycm_extra_conf.py  version.hpp.in
include/jules/array/: allocator.hpp  array.hpp  axis.hpp  binary_expr_array.hpp  blas.hpp  builder.hpp  descriptor.hpp  drop.hpp  expr_array.hpp  functional.hpp  fwd.hpp  io.hpp  mapped_ref_array.hpp  mapper.hpp  math.hpp  numeric.hpp  overlap.hpp  ref_array.hpp  reshape.hpp  slicing.hpp  strided_descriptor.hpp  strided_ref_array.hpp  tutorial.md  unary_expr_array.hpp
include/jules/base/: async.hpp  concepts.hpp  const_vector.hpp  index_set.hpp  index_span.hpp  index_view.hpp  math.hpp  numeric.hpp  random.hpp  sequence.hpp  string.hpp
include/jules/core/: concepts.hpp  debug.hpp  meta.hpp  range.hpp  ranges.hpp  string.hpp  type.hpp
include/jules/data/: action.hpp  column.hpp  column_model.hpp  data.hpp  dataframe.hpp  numeric.hpp  type.hpp
include/jules/dataframe/: action.hpp  column.hpp  column_model.hpp  dataframe.hpp  numeric.hpp  type.hpp
include/range/: range.hpp  tokenized.hpp
include/util/: algorithm.hpp  async.hpp  numeric.hpp  type.hpp
jules/: .ycm_extra_conf.py
jules/array/: all.hpp  allocator.hpp  array.hpp  array_decl.hpp  binary_expr_array.hpp  blas.hpp  builder.hpp  contiguous_array.hpp  descriptor.hpp  expr_array.hpp  functional.hpp  ind_array.hpp  io.hpp  mapper.hpp  math.hpp  numeric.hpp  ref_array.hpp  slice.hpp  sliced_array.hpp  slicing.hpp  strided_descriptor.hpp  strided_ref_array.hpp  tutorial.md  unary_expr_array.hpp
jules/array/detail/: all.hpp  allocator.hpp  array.hpp  array_decl.hpp  (+13 more)
jules/assert/: assert.hpp
jules/base/: async.hpp  const_vector.hpp  math.hpp  numeric.hpp  random.hpp
jules/core/: debug.hpp  meta.hpp  range.hpp  type.hpp
jules/dataframe/: action.hpp  column.hpp  column_decl.hpp  column_view.hpp  column_view_decl.hpp  dataframe.hpp  dataframe_colview.hpp  dataframe_colview_decl.hpp  dataframe_decl.hpp  io_decl.hpp  numeric.hpp  row_view.hpp  row_view_decl.hpp
jules/formula/: expression.hpp  expression_decl.hpp  formula.hpp  formula_decl.hpp  variable.hpp
jules/range/: iterator.hpp  range.hpp  tokenized.hpp
jules/util/: algorithm.hpp  async.hpp  numeric.hpp  type.hpp
stylesheets/: stylesheet.css
test/: .ycm_extra_conf.py  CMakeLists.txt  FindCBLAS.cmake  Makefile  version.cpp
test/array/: allocator.cpp  array.cpp  array_detail.cpp  axis.cpp  blas.cpp  builder.cpp  functional.cpp  ind_array.cpp  io.cpp  mapped_ref_array.cpp  math.cpp  matrix.cpp  numeric.cpp  ref_array.cpp  slice.cpp  sliced_array.cpp  slicing.cpp  strided_ref_array.cpp  vector.cpp
test/base/: const_vector.cpp  math.cpp  numeric.cpp  random.cpp
test/const_vector/: const_vector.cpp
test/core/: debug.cpp  range.cpp  string.cpp  type.cpp
test/data/: action.cpp  column.cpp  column_model.cpp  data.cpp
test/dataframe/: action.cpp  column.cpp  column_detail.cpp  column_model.cpp  dataframe.cpp  naive.cpp  storage.cpp
test/formula/: formula.cpp  variable.cpp
test/numeric/: numeric.cpp
test/range/: range.cpp
test/tutorial/: naive.cpp
util/: find_blas  release
(+25 files in other folders)
